# quant-pairs-trading-research

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
data/universe/: sp500_constituents.csv
docs/: project_spec.md  project_status.md
scripts/: check_reproducibility.py  run_backtest.py  run_data_pipeline.py  run_feature_engineering.py  run_forecast_comparison.py  run_forecasting_baselines.py  run_full_research.py  run_pair_selection.py  run_performance_analytics.py  run_regime_analysis.py  run_report_generation.py  run_robustness_analysis.py  run_signal_generation.py  run_spread_construction.py  run_universe_construction.py
src/quant_pairs/: __init__.py  config.py  orchestration.py
src/quant_pairs/analytics/: __init__.py  config.py  loader.py  pipeline.py
src/quant_pairs/backtest/: __init__.py  config.py  loader.py  pipeline.py
src/quant_pairs/data/: __init__.py  config.py  pipeline.py  reporting.py  sources.py  storage.py  validation.py
src/quant_pairs/features/: __init__.py  config.py  loader.py  pipeline.py  prices.py
tests/: test_backtest.py  test_config.py  test_data_pipeline.py  test_data_validation.py  test_feature_engineering.py  test_forecast_comparison.py  test_forecasting_baselines.py  test_full_pipeline_orchestration.py  test_imports.py  test_lstm_model.py  test_pair_selection.py  test_performance_analytics.py  test_regime_analysis.py  test_report_generation.py  test_reproducibility.py  test_robustness_analysis.py  test_signal_generation.py  test_spread_construction.py  test_universe_construction.py  test_xgboost_model.py
(+43 files in other folders)
