[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-pairs-trading-research"
version = "0.1.0"
description = "Cointegration-based pairs trading strategy quant research skeleton."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2",
  "PyYAML>=6.0",
  "yfinance>=0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
research = [
  "numpy>=1.26",
  "scipy>=1.12",
  "statsmodels>=0.14",
  "scikit-learn>=1.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
